# BarsuRaspBot

./: README.md  meson.build
src/: barsu-bot.vala  main.vala  meson.build
src/data/: commands.vala  keyboards.vala  strings.vala
src/modules/: meson.build  module-loader.vala
src/modules/admin/: admin-module.vala  meson.build
src/modules/admin/handlers/: admin-commands.vala  backup-command.vala  broadcast-command.vala  cmds-command.vala  find-command.vala  group-command.vala  msg-command.vala  remove-command.vala  save-command.vala  stat-command.vala  sync-command.vala  update-apk-command.vala
src/modules/barsu/: barsu-module.vala  meson.build
src/modules/barsu/handlers/: button-actions.vala  chat-commands.vala  inline-timetable.vala
src/modules/barsu/handlers/actions/: cancel-action.vala  empty-action.vala  install-action.vala  send-group-action.vala  send-teacher-action.vala
src/modules/barsu/handlers/commands/: apk-command.vala  bells-command.vala  day-command.vala  help-command.vala  next-command.vala  rasp-command.vala  settings-command.vala
src/modules/barsu/loaders/: image-loader.vala
src/modules/barsu/managers/: broadcast-manager.vala  image-manager.vala  schedule-manager.vala  timetable-manager.vala
src/modules/barsu/models/: timetable-image.vala
src/modules/bus/: bus-module.vala  meson.build
src/modules/bus/handlers/: button-actions.vala  chat-commands.vala
src/modules/bus/loaders/: bus-loader.vala
src/modules/bus/managers/: bus-manager.vala
src/modules/bus/models/: bus-direction.vala  bus-info.vala  bus-stop.vala
src/modules/data-store/: data-store-module.vala  meson.build
src/modules/data-store/handlers/: settings-command.vala
src/modules/data-store/handlers/actions/: change-group.vala  change-theme.vala  edit-subscription.vala
src/modules/data-store/handlers/commands/: settings-command.vala
src/modules/data-store/loaders/: data-loader.vala
src/modules/data-store/managers/: data-manager.vala
src/modules/data-store/models/: config.vala  user-post.vala  user-state.vala
src/modules/image/: image-theme.vala  meson.build
src/modules/setup/: meson.build  start-module.vala
src/modules/setup/handlers/: restart-command.vala  start-command.vala  start-commands.vala  start-messages.vala  stop-command.vala
src/modules/start/: meson.build  start-module.vala
src/modules/start/handlers/: start-commands.vala  start-messages.vala
src/modules/student/: meson.build
src/modules/student/loaders/: faculty-loader.vala  timetable-loader.vala
src/modules/student/models/: day-schedule.vala  faculty.vala  lesson.vala  speciality.vala  sublesson.vala  timetable.vala
src/modules/teacher/: meson.build
src/modules/teacher/loaders/: department-loader.vala  timetable-loader.vala
src/modules/teacher/models/: day-schedule.vala  department.vala  lesson.vala  timetable.vala
src/modules/timetable/: meson.build  timetable-module.vala
src/modules/timetable/handlers/: button-actions.vala  chat-commands.vala  group-message.vala  inline-timetable.vala
src/modules/timetable/loaders/: config-loader.vala  group-loader.vala  image-loader.vala  timetable-loader.vala
src/modules/timetable/managers/: broadcast-manager.vala  config-manager.vala  group-manager.vala  image-manager.vala  schedule-manager.vala  timetable-manager.vala
src/modules/timetable/models/: day-schedule.vala  department.vala  faculty.vala  lesson.vala  teacher-schedule.vala  teacher-timetable.vala  timetable-image.vala  timetable.vala
src/utils/: file-util.vala
