bot_sources += files(
    'handlers/backup-command.vala',
    'handlers/broadcast-command.vala',
    'handlers/cmds-command.vala',
    'handlers/find-command.vala',
    'handlers/group-command.vala',
    'handlers/msg-command.vala',
    'handlers/remove-command.vala',
    'handlers/stat-command.vala',
    'handlers/sync-command.vala',
    'handlers/update-apk-command.vala',
    
    'admin-module.vala',
)