bot_sources += files(
    'handlers/button-actions.vala',
    'handlers/chat-commands.vala',
    'handlers/inline-timetable.vala',
    
    'loaders/image-loader.vala',
    
    'managers/broadcast-manager.vala',
    'managers/image-manager.vala',
    'managers/schedule-manager.vala',
    'managers/timetable-manager.vala',
    
    'models/timetable-image.vala',
    
    'barsu-module.vala'
)