bot_sources += files(
    'handlers/actions/cancel-action.vala',
    'handlers/actions/empty-action.vala',
    'handlers/actions/install-action.vala',
    'handlers/actions/send-group-action.vala',
    'handlers/actions/send-teacher-action.vala',
    
    'handlers/commands/bells-command.vala',
    'handlers/commands/day-command.vala',
    'handlers/commands/help-command.vala',
    'handlers/commands/next-command.vala',
    'handlers/commands/rasp-command.vala',
    
    'handlers/chat-commands.vala',
    'handlers/inline-timetable.vala',
    
    'loaders/image-loader.vala',
    
    'managers/broadcast-manager.vala',
    'managers/image-manager.vala',
    'managers/schedule-manager.vala',
    'managers/timetable-manager.vala',
    
    'models/timetable-image.vala',
    
    'barsu-module.vala'
)