bot_sources += files(
    'handlers/commands/settings-command.vala',
    'handlers/actions/edit-subscription.vala',
    'handlers/actions/change-group.vala',
    'handlers/actions/change-theme.vala',
    
    'loaders/data-loader.vala',
    
    'managers/data-manager.vala',
    
    'models/config.vala',
    'models/user-state.vala',
    'models/user-post.vala',
    
    'data-store-module.vala'
)