bot_sources += files(
    'handlers/button-actions.vala',
    'handlers/chat-commands.vala',
    'handlers/inline-timetable.vala',
    
    'loaders/config-loader.vala',
    'loaders/group-loader.vala',
    'loaders/image-loader.vala',
    'loaders/timetable-loader.vala',
    
    'managers/broadcast-manager.vala',
    'managers/config-manager.vala',
    'managers/group-manager.vala',
    'managers/image-manager.vala',
    'managers/schedule-manager.vala',
    'managers/timetable-manager.vala',
    
    'models/day-schedule.vala',
    'models/department.vala',
    'models/faculty.vala',
    'models/lesson.vala',
    'models/teacher-schedule.vala',
    'models/teacher-timetable.vala',
    'models/timetable.vala',
    'models/timetable-image.vala',
    
    'timetable-module.vala'
)